--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "angular-timeline": "~1.6.2",
     "omh-web-visualizations": "roberthorlings/web-visualizations#21b283c",
-    "Angular.uuid2": "angular-uuid2#*"
+    "Angular.uuid2": "angular-uuid2#*",
+    "angular-indexedDB": "angular-indexed-db#~1.1.3"
   }
 }
